two-layer 1D conv

--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,6 +1325,7 @@
     "            nn.MaxPool1d(kernel_size=kmer_size,stride=kmer_size))\n",
     "\n",
     "        self.conv2 = nn.Sequential(\n",
+    "            nn.BatchNorm1d(num_features=np.power(kmer_size,4)),\n",
     "            nn.Conv1d(in_channels=np.power(kmer_size,4),out_channels=np.power(kmer_size,4)*4,kernel_size=kmer_size,stride=1,padding_mode='zeros'),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.1),\n",
@@ -1351,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "outputs": [],
    "source": [
     "# define weighted prediction accuracy\n",
@@ -1404,22 +1405,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jiachensun/opt/miniforge3/envs/PyTorch_py3.8/lib/python3.8/site-packages/torch/nn/modules/lazy.py:180: UserWarning: Lazy modules are a new feature under heavy development so changes to the API or functionality can happen at any moment.\n",
+      "  warnings.warn('Lazy modules are a new feature under heavy development '\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 | train: 0.7549 | valid: 0.7451\n",
-      "Epoch 2 | train: 0.721 | valid: 0.7074\n",
-      "Epoch 3 | train: 0.7601 | valid: 0.7456\n",
-      "Epoch 4 | train: 0.7418 | valid: 0.7226\n",
-      "Epoch 5 | train: 0.8087 | valid: 0.7769\n",
-      "Epoch 6 | train: 0.8464 | valid: 0.792\n",
-      "Epoch 7 | train: 0.9094 | valid: 0.7627\n",
-      "Epoch 8 | train: 0.9449 | valid: 0.7683\n",
-      "Epoch 9 | train: 0.9803 | valid: 0.7339\n",
-      "Epoch 10 | train: 0.9697 | valid: 0.7455\n"
+      "Epoch 1 | train: 0.7859 | valid: 0.757\n",
+      "Epoch 2 | train: 0.7307 | valid: 0.7235\n",
+      "Epoch 3 | train: 0.7927 | valid: 0.7813\n",
+      "Epoch 4 | train: 0.8163 | valid: 0.7908\n",
+      "Epoch 5 | train: 0.8565 | valid: 0.7705\n",
+      "Epoch 6 | train: 0.9259 | valid: 0.7599\n",
+      "Epoch 7 | train: 0.8853 | valid: 0.7596\n",
+      "Epoch 8 | train: 0.9312 | valid: 0.7586\n",
+      "Epoch 9 | train: 0.9354 | valid: 0.7386\n",
+      "Epoch 10 | train: 0.9342 | valid: 0.6535\n"
      ]
     }
    ],
