--- a/hw3_colab.ipynb
+++ b/hw3_colab.ipynb
@@ -45,10 +45,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "dKuWK9dwjQ9n",
-        "outputId": "b5e1bfea-30db-42ec-a059-9fbd2b204e75",
+        "outputId": "6b9d6540-f27a-4757-c27b-f6b82449623f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 469
@@ -60,11 +60,11 @@
           "name": "stdout",
           "text": [
             "Cloning into 'CS284A_HW3'...\n",
-            "remote: Enumerating objects: 53, done.\u001b[K\n",
-            "remote: Counting objects: 100% (53/53), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (46/46), done.\u001b[K\n",
-            "remote: Total 53 (delta 12), reused 43 (delta 5), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (53/53), done.\n"
+            "remote: Enumerating objects: 56, done.\u001b[K\n",
+            "remote: Counting objects: 100% (56/56), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (49/49), done.\u001b[K\n",
+            "remote: Total 56 (delta 14), reused 43 (delta 5), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (56/56), done.\n"
           ]
         },
         {
@@ -80,7 +80,7 @@
               "width": 350
             }
           },
-          "execution_count": 3
+          "execution_count": 1
         }
       ],
       "source": [
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "aU4qdBYNjQ9p"
       },
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "OeeY-xOmjQ9q"
       },
@@ -192,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "id": "lL3_9L8mjQ9q"
       },
@@ -224,7 +224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "id": "if_tzzRDjQ9r"
       },
@@ -250,13 +250,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 128,
       "metadata": {
         "id": "yyy7M9tRjQ9r"
       },
       "outputs": [],
       "source": [
-        "batch_size = 512\n",
+        "batch_size = 128\n",
         "\n",
         "# Data loader\n",
         "train_loader = torch.utils.data.DataLoader(dataset=train_dataset,\n",
@@ -273,10 +273,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 129,
       "metadata": {
         "id": "3yUe4QO_jQ9s",
-        "outputId": "e07d24e3-ca64-4609-f982-722bbdded117",
+        "outputId": "e42a691b-2bc5-4cff-d490-2c68b8be44ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1438,7 +1438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": null,
       "metadata": {
         "id": "01-5eZt3jQ9y"
       },
@@ -1494,7 +1494,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 92,
       "outputs": [],
       "source": [
         "# define weighted prediction accuracy\n",
@@ -1549,7 +1549,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model = MyConvModel().cuda()"
+        "conv_model = MyConvModel().cuda()"
       ],
       "metadata": {
         "id": "7omJdf8QnrvB",
@@ -1558,7 +1558,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1572,32 +1572,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 130,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1 | train: 0.737 | valid: 0.7362\n",
-            "Epoch 2 | train: 0.7366 | valid: 0.7418\n",
-            "Epoch 3 | train: 0.7393 | valid: 0.7315\n",
-            "Epoch 4 | train: 0.7395 | valid: 0.7316\n",
-            "Epoch 5 | train: 0.7384 | valid: 0.7382\n",
-            "Epoch 6 | train: 0.7383 | valid: 0.7391\n",
-            "Epoch 7 | train: 0.7352 | valid: 0.7377\n",
-            "Epoch 8 | train: 0.7355 | valid: 0.7376\n",
-            "Epoch 9 | train: 0.7353 | valid: 0.7398\n",
-            "Epoch 10 | train: 0.7362 | valid: 0.7369\n",
-            "Epoch 11 | train: 0.7345 | valid: 0.7367\n",
-            "Epoch 12 | train: 0.736 | valid: 0.7323\n",
-            "Epoch 13 | train: 0.7352 | valid: 0.7351\n",
-            "Epoch 14 | train: 0.7345 | valid: 0.7374\n",
-            "Epoch 15 | train: 0.7354 | valid: 0.7362\n",
-            "Epoch 16 | train: 0.7399 | valid: 0.729\n",
-            "Epoch 17 | train: 0.7361 | valid: 0.7406\n",
-            "Epoch 18 | train: 0.7354 | valid: 0.7379\n",
-            "Epoch 19 | train: 0.7358 | valid: 0.74\n",
-            "Epoch 20 | train: 0.7389 | valid: 0.7317\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-130-2d93a4a699ef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mnum_epochs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.001\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconv_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;31m# Train the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mtotal_step\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'conv_model' is not defined"
           ]
         }
       ],
@@ -1607,7 +1592,7 @@
         "# Choose hyper parameters and optimizer\n",
         "num_epochs = 20\n",
         "learning_rate = 0.001\n",
-        "optimizer = torch.optim.Adam(params=model.parameters(), lr=learning_rate)\n",
+        "optimizer = torch.optim.Adam(params=conv_model.parameters(), lr=learning_rate)\n",
         "# Train the model\n",
         "total_step = len(train_loader)\n",
         "\n",
@@ -1624,7 +1609,7 @@
         "        a = a.cuda()\n",
         "\n",
         "        # Forward pass\n",
-        "        output = model(X, a)\n",
+        "        output = conv_model(X, a)\n",
         "        criterion.weight = w\n",
         "        loss = criterion(output, y)\n",
         "\n",
@@ -1633,22 +1618,23 @@
         "        loss.backward()\n",
         "        optimizer.step()\n",
         "\n",
-        "    err_train[epoch] = accuracy_wrap(model,train_loader)\n",
-        "    err_valid[epoch] = accuracy_wrap(model,valid_loader)\n",
+        "    err_train[epoch] = accuracy_wrap(conv_model,train_loader)\n",
+        "    err_valid[epoch] = accuracy_wrap(conv_model,valid_loader)\n",
         "\n",
         "    print('Epoch', epoch+1,'| train:',round(err_train[epoch],4) ,'| valid:',round(err_valid[epoch],4))"
       ],
       "metadata": {
         "id": "CNUny4UgjQ9z",
-        "outputId": "9f28e36a-ee6c-4344-8ed7-7e1ab60c3cba",
+        "outputId": "2347d512-8b72-48e6-e34a-b1a55d6837d0",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 232
         }
       }
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1698,12 +1684,142 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 134,
       "metadata": {
         "id": "NKhZCi6TjQ9z"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "from numpy.core.fromnumeric import squeeze\n",
+        "class MyRecuModel(nn.Module):\n",
+        "    def __init__(self):\n",
+        "      self.hidden_size = 128\n",
+        "      self.layers = 1\n",
+        "      super(MyRecuModel, self).__init__()\n",
+        "      self.lstm = nn.LSTM(input_size = 4, hidden_size = self.hidden_size, \n",
+        "                          num_layers = self.layers, batch_first=True, dropout=0.4)\n",
+        "\n",
+        "      self.dense = nn.Sequential(\n",
+        "          nn.Linear(in_features = self.hidden_size, out_features=self.hidden_size),\n",
+        "          nn.ReLU())\n",
+        "        \n",
+        "      self.output = nn.Sequential(\n",
+        "          nn.Linear(in_features=self.hidden_size+1, out_features=1))\n",
+        "\n",
+        "    def forward(self, X, a):\n",
+        "      batch_size = X.shape[0]\n",
+        "\n",
+        "      hidden = (torch.zeros(self.layers, batch_size, self.hidden_size).cuda(), \n",
+        "                torch.zeros(self.layers, batch_size, self.hidden_size).cuda())\n",
+        "\n",
+        "      _, (final_hidden, final_cell) = self.lstm(X, hidden)\n",
+        "\n",
+        "      final_hidden = squeeze(final_hidden)\n",
+        "\n",
+        "      out = self.dense(final_hidden)\n",
+        "      out = torch.cat((out, a),1)\n",
+        "      out = self.output(out)\n",
+        "      return out\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "recu_model = MyRecuModel().cuda()"
+      ],
+      "metadata": {
+        "id": "u13fnxOuLcqQ",
+        "outputId": "f8e4094c-aed9-4ca5-8a9f-4c2579bd379e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/torch/nn/modules/rnn.py:65: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.4 and num_layers=1\n",
+            "  \"num_layers={}\".format(dropout, num_layers))\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "criterion = nn.BCEWithLogitsLoss()\n",
+        "\n",
+        "# Choose hyper parameters and optimizer\n",
+        "num_epochs = 100\n",
+        "learning_rate = 0.001\n",
+        "optimizer = torch.optim.Adam(params=recu_model.parameters(), lr=learning_rate)\n",
+        "# Train the model\n",
+        "total_step = len(train_loader)\n",
+        "\n",
+        "err_train = np.zeros(shape=num_epochs)\n",
+        "err_valid = np.zeros(shape=num_epochs)\n",
+        "\n",
+        "for epoch in range(num_epochs):\n",
+        "    recu_model.train()\n",
+        "\n",
+        "    for i, (X, y, w, a) in enumerate(train_loader):\n",
+        "\n",
+        "        X = X.cuda()\n",
+        "        y = y.cuda()\n",
+        "        w = w.cuda()\n",
+        "        a = a.cuda()\n",
+        "\n",
+        "        # Forward pass\n",
+        "        output = recu_model(X, a)\n",
+        "        criterion.weight = w\n",
+        "        loss = criterion(output, y)\n",
+        "\n",
+        "        # Backward and optimize\n",
+        "        optimizer.zero_grad()\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "\n",
+        "    err_train[epoch] = accuracy_wrap(recu_model,train_loader)\n",
+        "    err_valid[epoch] = accuracy_wrap(recu_model,valid_loader)\n",
+        "\n",
+        "    print('Epoch', epoch+1,'| train:',round(err_train[epoch],4) ,'| valid:',round(err_valid[epoch],4))"
+      ],
+      "metadata": {
+        "id": "p_JZoFGsLb_y",
+        "outputId": "5cedbbcb-f5ca-449a-a98c-d84f9f8341db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1 | train: 0.5503 | valid: 0.5432\n",
+            "Epoch 2 | train: 0.6259 | valid: 0.6164\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.plot(err_train, color='r')\n",
+        "plt.plot(err_valid, color='g')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "kXSO50wq2W3U"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1772,7 +1888,6 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "machine_shape": "hm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1792,7 +1907,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.8.13"
     },
-    "gpuClass": "premium"
+    "gpuClass": "standard"
   },
   "nbformat": 4,
   "nbformat_minor": 0
